Switch to virtual Threads for IO-Tasks